--- a/settings.json.example
+++ b/settings.json.example
@@ -11,6 +11,7 @@
     "timeout": 5
   },
   "interval": 300,
+  "temperature_units": "C",
   "sensors": {
     "Hue ambient light sensor 1": "Room1_Light_Sensor",
     "Hue ambient light sensor 2": "Room2_Light_Sensor",
