--- a/.github/workflows/premerge.yaml
+++ b/.github/workflows/premerge.yaml
@@ -1,10 +1,9 @@
 name: 'Check inbound changes'
 permissions:
   contents: read
-  pull-requests: write
 
 # Triggers
-on: [push, workflow_dispatch]
+on: [push, pull_request, workflow_dispatch]
 
 # Jobs
 jobs:
